# mesagkesto

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  messagebox.yml  messagebox.yml.example  release.toml
.github/workflows/: dart-bindings.yml  docker-publish.yml
bindings/dart/: Cargo.toml  README.md
bindings/dart/lib/: bridge_generated.dart
bindings/dart/mesagkesto/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/mesagkesto/android/: build.gradle  settings.gradle
bindings/dart/mesagkesto/android/src/main/: AndroidManifest.xml
bindings/dart/mesagkesto/android/src/main/kotlin/com/argonauths/mesagkesto/: MesagkestoPlugin.kt
bindings/dart/mesagkesto/android/src/test/kotlin/com/argonauths/mesagkesto/: MesagkestoPluginTest.kt
bindings/dart/mesagkesto/lib/: bridge_generated.dart  bridge_generated.h  mesagkesto.dart
bindings/dart/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
communication/: Cargo.toml
communication/src/: error.rs  exchange.rs  lib.rs  query.rs
messagebox/: Cargo.toml  README.md  messagebox.yml
messagebox/src/: lib.rs  main.rs  messagebox.rs  messagebox_listener.rs  messages.rs  notifier.rs  oobis.rs  queue.rs  responses_store.rs  storage.rs  test.rs  validate.rs  verify.rs
messagebox/src/verify/: mod.rs  reverify.rs  signer.rs  task.rs  verifier.rs  watcher_communication.rs
messagebox/tests/: test_messagebox_setup.rs  test_response_not_ready.rs  test_validation.rs
