[package]
name = "messagebox"
version = "0.1.2-beta.1"
edition = "2021"
license = "EUPL-1.2"
description = "Service to connect people and machines"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde_json = "1.0.96"
keri-core = { version = "0.9.0", features = ["oobi", "query", "mailbox"]}
url = "2.4.0"
thiserror = "1.0.43"
figment = { version = "0.10.6", features = ["yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1.1", features = ["derive"] }
anyhow = { version = "1.0.56" }
tokio = {version = "1.29.1", features = ["sync", "rt", "macros", "rt-multi-thread", "time"]}
ureq = {version = "2.6.2", features = ["json"]}
said = {version = "0.4.0"}
cesrox = { version = "0.1.4", features = ["cesr-proof"]}
keri-controller = { version = "0.1.1" }

[dev-dependencies]
tempfile = "3.8.1"

[package.metadata.release]
publish=false
tag=true
tag-name="v{{version}}"
pre-release-hook = ["git", "cliff", "--tag", "{{version}}", "-r", "../", "--output", "../CHANGELOG.md" ]
pre-release-commit-message="chore: release {{version}} version"
