[package]
name = "bindings"
version = "0.1.2-beta.2"
edition = "2021"
description = "MesaÄkesto bindings for Dart"
license = "EUPL-1.2"
publish = false

[lib]
name = "dartmesagkesto"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "=1.82.1"
messagebox = {path = "../../messagebox"}
openssl = { version = "0.10", features = ["vendored"] }
